--- a/stylesheets/stylesheet2.css
+++ b/stylesheets/stylesheet2.css
@@ -50,8 +50,8 @@ Theme Styles
 
 body {
   box-sizing: border-box;
-  color:#282828;
-  background: #363636;
+  color:#373737;
+  background: #000000;
   font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -61,7 +61,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin: 10px 0;
   font-weight: 700;
-  color:#222222;
+  color:#888888;
   font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
   letter-spacing: -1px;
 }
@@ -98,12 +98,12 @@ p {
 }
 
 footer p {
-  color: #f2f2f2;
+  color: #2f2f2f;
 }
 
 a {
   text-decoration: none;
-  color: #007edf;
+  color: #edf007;
   text-shadow: none;
 
   transition: color 0.5s ease;
@@ -121,7 +121,7 @@ a {
 a:hover, a:focus {text-decoration: underline;}
 
 footer a {
-  color: #F2F2F2;
+  color: #2f2f2f;
   text-decoration: underline;
 }
 
