--- a/stylesheets/stylesheet2.css
+++ b/stylesheets/stylesheet2.css
@@ -98,12 +98,12 @@ p {
 }
 
 footer p {
-  color: #2f2f2f;
+  color: #468999;
 }
 
 a {
   text-decoration: none;
-  color: #3399ff;
+  color: #468999;
   text-shadow: none;
 
   transition: color 0.5s ease;
