--- a/stylesheets/stylesheet2.css
+++ b/stylesheets/stylesheet2.css
@@ -50,7 +50,7 @@ Theme Styles
 
 body {
   box-sizing: border-box;
-  color:#ffdae0;
+  color:#3e0d3f;
   background: #3e0d3f;
   font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
