--- a/stylesheets/stylesheet2.css
+++ b/stylesheets/stylesheet2.css
@@ -50,8 +50,8 @@ Theme Styles
 
 body {
   box-sizing: border-box;
-  color:#3e0d3f;
-  background: #ffdae0;
+  color:#ffdae0;
+  background: #3e0d3f;
   font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
