--- a/stylesheets/stylesheet2.css
+++ b/stylesheets/stylesheet2.css
@@ -51,7 +51,7 @@ Theme Styles
 body {
   box-sizing: border-box;
   color:#3e0d3f;
-  background: #3e0d3f;
+  background: #212121;
   font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
