--- a/stylesheets/stylesheet2.css
+++ b/stylesheets/stylesheet2.css
@@ -1,6 +1,6 @@
 /*******************************************************************************
-Slate Theme for GitHub Pages
-by Jason Costello, @jsncostello
+Modified from "Slate Theme for GitHub Pages by Jason Costello, @jsncostello"
+modifications by ktharr06
 *******************************************************************************/
 
 @import url(pygment_trac.css);
@@ -22,7 +22,7 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-  margin: 0;
+  margin: 3;
   padding: 0;
   border: 0;
   font: inherit;
@@ -50,7 +50,7 @@ Theme Styles
 
 body {
   box-sizing: border-box;
-  color:#3e0d3f;
+  color:#5C5CE6;
   background: #212121;
   font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
