--- a/stylesheets/stylesheet2.css
+++ b/stylesheets/stylesheet2.css
@@ -287,7 +287,7 @@ Full-Width Styles
 }
 
 #header_wrap {
-  background: #212121;
+  background: #5c5ce6;
   background: -moz-linear-gradient(top, #373737, #212121);
   background: -webkit-linear-gradient(top, #373737, #212121);
   background: -ms-linear-gradient(top, #373737, #212121);
@@ -365,7 +365,7 @@ Full-Width Styles
 }
 
 #footer_wrap {
-  background: #5C5CE6;
+  background: #212121;
 }
 
 
