--- a/stylesheets/stylesheet2.css
+++ b/stylesheets/stylesheet2.css
@@ -22,7 +22,7 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-  margin: 30;
+  margin: 0;
   padding: 0;
   border: 0;
   font: inherit;
@@ -287,7 +287,7 @@ Full-Width Styles
 }
 
 #header_wrap {
-  background: #5c5ce6;
+  background: #000000;
   background: -moz-linear-gradient(top, #373737, #212121);
   background: -webkit-linear-gradient(top, #373737, #212121);
   background: -ms-linear-gradient(top, #373737, #212121);
