--- a/stylesheets/StylesheetBuild.css
+++ b/stylesheets/StylesheetBuild.css
@@ -1,7 +1,7 @@
 body {
 box-sizing: border-box;
-color:#5C5CE6;
-background: #000000;
+color:#FFFF00;
+background: #00FF00;
 font-size: 16px;
 font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
 line-height: 1.5;
@@ -11,7 +11,7 @@ line-height: 1.5;
 h1, h2, h3, h4, h5, h6 {
 margin: 10px 0;
 font-weight: 700;
-color:#468999;
+  color:#f2f2f2;
 font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
 letter-spacing: -1px;
 }
