--- a/stylesheets/StylesheetBuild.css
+++ b/stylesheets/StylesheetBuild.css
@@ -1,6 +1,6 @@
 body {
 box-sizing: border-box;
-color:#FFFF00;
+color:#5c5ce6;
 background: #00FF00;
 font-size: 16px;
 font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
@@ -11,7 +11,7 @@ line-height: 1.5;
 h1, h2, h3, h4, h5, h6 {
 margin: 10px 0;
 font-weight: 700;
-  color:#f2f2f2;
+  color:#000000;
 font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
 letter-spacing: -1px;
 }
@@ -24,5 +24,4 @@ font-weight: 700;
 h2 {
 padding-bottom: 10px;
 font-size: 32px;
-background: url('../images/bg_hr.png') repeat-x bottom;
 }
