--- a/stylesheets/StylesheetBuild.css
+++ b/stylesheets/StylesheetBuild.css
@@ -1,7 +1,7 @@
 body {
 box-sizing: border-box;
-color:#5c5ce6;
-background: #99FF99;
+color:#000000;
+background: #000000;
 font-size: 16px;
 font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
 line-height: 1.5;
