--- a/stylesheets/StylesheetBuild.css
+++ b/stylesheets/StylesheetBuild.css
@@ -11,7 +11,7 @@ line-height: 1.5;
 h1, h2, h3, h4, h5, h6 {
 margin: 10px 0;
 font-weight: 700;
-  color:#000000;
+  color:#ff3399;
 font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
 letter-spacing: -1px;
 }
