--- a/stylesheets/StylesheetBuild.css
+++ b/stylesheets/StylesheetBuild.css
@@ -1,3 +1,11 @@
+html, body, h1, h2, h3, h4, h5, h6, p {
+margin: 0;
+padding: 0;
+border: 0;
+font: inherit;
+vertical-align: baseline;
+}
+
 body {
 box-sizing: border-box;
 color:#000000;
