--- a/stylesheets/StylesheetBuild.css
+++ b/stylesheets/StylesheetBuild.css
@@ -4,24 +4,25 @@ color:#000000;
 background: #66ff66;
 font-size: 16px;
 font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
-line-height: 1.5;
+line-height: 1;
 -webkit-font-smoothing: antialiased;
 }
 
 h1, h2, h3, h4, h5, h6 {
-margin: 50px 0;
+margin: 10px 0;
 font-weight: 700;
-  color:#ff3399;
 font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
 letter-spacing: -1px;
 }
 
 h1 {
 font-size: 36px;
+color: #0000ff;
 font-weight: 700;
 }
 
 h2 {
 padding-bottom: 10px;
+color: #ff3399;
 font-size: 28px;
 }
