--- a/stylesheets/StylesheetBuild.css
+++ b/stylesheets/StylesheetBuild.css
@@ -24,11 +24,19 @@ font-weight: 700;
 h2 {
 padding-bottom: 10px;
 color: #ff3399;
-font-size: 28px;
+font-size: 32px;
 }
 
 h3 {
-font-size: 18px;
+font-size: 28px;
 color: #000000;
 padding-bottom: 10px;
+}
+
+h4 {
+font-size:; 21px;
+}
+
+p {
+margin: 10px 0 15px 0;
 }
